# gameboy-emulator

./: .gitignore  Cargo.toml  README.md  imgui.ini
src/: bus.odin  cpu.odin  cpu.rotate_shift_bit_instructions.odin  cpu_arithmetic_instructions.odin  cpu_branch_instructions.odin  cpu_load_instructions.odin  cpu_opcode_length_and_timing_tables.odin  dma.odin  dma.rs  helpers.odin  helpers.rs  imgui_helpers.odin  interrupt_controller.odin  interrupt_controller.rs  io.odin  io.rs  lcd.odin  lcd.rs  lib.rs  main.odin  main.rs  memory_mapper.odin  opengl.odin  ppu.odin  registers.odin  timer.odin  window.odin
src/bus/: bus.rs
src/cpu/: arithmetic_instructions.rs  branch_instructions.rs  cpu.rs  load_instructions.rs  mod.rs  opcode_tables.rs  registers.rs  rotate_shift_bit_instructions.rs
src/gui/: custom_event_loop.rs  gui_app.rs  mod.rs  shader.wgsl  wgpu_triangle.rs
src/ppu/: ppu.rs
src/timer/: timer.rs
tests/: blargg_cpu.rs  debug_helpers.odin  test_cpu.odin
